--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <h1>BMI Calculator</h1>
+    <input type="text" id="weight" placeholder="Your weight in kg" />
+    <input type="text" id="height" placeholder="Your height in m" />
+    <button id="Calculate">Calculate!</button>
     <script src="bmiCalculator.js"></script>
   </body>
 </html>
