--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,11 @@
   </head>
   <body>
     <h1>BMI Calculator</h1>
-    <input type="text" id="weight" placeholder="Your weight in kg" />
-    <input type="text" id="height" placeholder="Your height in m" />
-    <button id="Calculate">Calculate!</button>
+    <input type="number" id="weight" placeholder="Your weight in kg" />
+    <input type="number" id="height" placeholder="Your height in m" />
+    <button id="calculateBtn">Calculate!</button>
+    <div id="results"></div>
     <script src="bmiCalculator.js"></script>
+    <!-- <script src="bmiUI.js"></script> -->
   </body>
 </html>
