divide functionality - UI in a seperete file

--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,6 @@
     <button id="calculateBtn">Calculate!</button>
     <div id="results"></div>
     <script src="bmiCalculator.js"></script>
+    <script src="bmiUI.js"></script>
   </body>
 </html>
